--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gadwall js cli",
   "main": "index.js",
   "bin": {
-      "gadwall": "./index.js"
+    "gadwall": "./index.js"
   },
   "scripts": {
     "test": "tap test/*.js"
@@ -19,5 +19,9 @@
   "dependencies": {
     "get-stdin": "^6.0.0",
     "vm2": "^3.6.4"
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.2",
+    "tap": "^12.0.1"
   }
 }
